# tyche

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  backlog.md  deny.toml  gap_audit.md
.config/: nextest.toml
.github/workflows/: ci.yml
crates/tyche/: Cargo.toml
crates/tyche-consus/: Cargo.toml
crates/tyche-consus/src/: archive.rs  contract.rs  key.rs  lib.rs
crates/tyche-consus/tests/: archive_roundtrip.rs
crates/tyche-core/: Cargo.toml
crates/tyche-core/benches/: counter_sampling.rs
crates/tyche-core/src/: lib.rs
crates/tyche-core/src/design/: mod.rs  parameter.rs  space.rs
crates/tyche-core/src/ensemble/: mod.rs  model.rs  view.rs
crates/tyche-core/src/sampling/: contract.rs  latin_hypercube.rs  mod.rs  sequence.rs
crates/tyche-core/src/sampling/counter/: domain.rs  mod.rs  scalar.rs  seed.rs  splitmix.rs
crates/tyche-core/src/sampling/design/: latin_hypercube.rs  mod.rs
crates/tyche-core/src/sampling/design/sobol/: direction.rs  error.rs  fixed.rs  kernel.rs  mod.rs  policy.rs  range.rs  runtime.rs
crates/tyche-core/src/sampling/distribution/: mod.rs  normal.rs
crates/tyche-core/src/sampling/distribution/discrete/: category.rs  error.rs  importance.rs  mod.rs  weighted.rs  weights.rs
crates/tyche-core/src/statistics/: error.rs  mod.rs  moments.rs  sensitivity.rs  variance.rs
crates/tyche-core/src/study/: error.rs  mod.rs  sample.rs  specification.rs
crates/tyche-core/src/uncertainty/: conformal.rs  error.rs  interval.rs  mod.rs
crates/tyche-core/tests/: conformal_laws.rs  discrete_sampling.rs  layout_allocation.rs  sampling_laws.rs  sobol_design.rs  statistics_laws.rs  stream_vectors.rs  study_contract.rs
crates/tyche-moirai/: Cargo.toml
crates/tyche-moirai/src/: dispatch.rs  error.rs  lib.rs
crates/tyche-moirai/tests/: dispatch_contract.rs
crates/tyche/examples/: reproducible_study.rs
crates/tyche/src/: lib.rs
docs/adr/: 0001-reproducible-study-boundary.md  0002-typed-design-errors.md  0003-domain-separated-counter-schedule.md  0004-random-access-sobol.md  0005-discrete-importance-sampling.md
